<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nature Chá</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Senha</string>
    <string name="login_button_text">Acessar</string>
    <string name="login_forgot_password_text">Esqueci a senha</string>
    <string name="login_or_continue_with">ou entrar com</string>
    <string name="login_google_button">Google</string>
    <string name="login_no_account">Não tem conta?</string>
    <string name="login_create_account">Criar conta grátis</string>
    <string name="login_welcome_back">Que bom te ver de novo!</string>
    <string name="login_social_proof">Feito para amantes de chá</string>
    <string name="error_login_invalid_credentials">E-mail ou senha incorretos.</string>
    <string name="error_login_generic">Erro ao fazer login. Tente novamente.</string>
    <string name="error_google_signin_generic">Erro ao fazer login com Google. Tente novamente.</string>
    <string name="google_sign_in_cancelled">Login com Google cancelado.</string>
    <string name="register_title">Crie sua conta</string>
    <string name="register_subtitle">Leva menos de 1 minuto.</string>
    <string name="register_name_hint">Nome *</string>
    <string name="register_email_hint">E-mail *</string>
    <string name="register_password_hint">Senha *</string>
    <string name="register_confirm_password_hint">Repetir senha *</string>
    <string name="register_phone_hint">Telefone (opcional)</string>
    <string name="register_button_text">Cadastrar</string>
    <string name="register_already_have_account">Já tem conta?</string>
    <string name="register_go_to_login">Entrar</string>
    <string name="register_update_button_text">Atualizar</string>
    <string name="register_btn_logout">Logout</string>
    <string name="register_edit_mode_title">Editar Perfil</string>
    <string name="snackbar_success_profile_updated">Perfil atualizado com sucesso!</string>
    <string name="register_section_subscription">ASSINATURA</string>
    <string name="register_section_personal_data">DADOS PESSOAIS</string>
    <string name="register_member_premium">Membro Vitalício</string>
    <string name="register_member_free">Plano Gratuito</string>
    <string name="register_btn_manage">Ver Benefícios</string>
    <string name="register_btn_upgrade">Seja Premium</string>
    <string name="register_google_managed_title">Conta Google</string>
    <string name="register_google_managed_desc">Sua senha é gerenciada pelo Google.</string>
    <string name="register_change_email_button">Alterar e-mail</string>
    <string name="register_change_password_button">Alterar senha</string>
    <string name="snackbar_success_reset_email_sent">Enviamos um e-mail com instruções para redefinir sua senha.</string>
    <string name="dialog_change_email_title">Alterar E-mail</string>
    <string name="dialog_change_email_message">Confirme sua senha e informe o novo e-mail.</string>
    <string name="dialog_current_password_hint">Senha atual</string>
    <string name="dialog_new_email_hint">Novo e-mail</string>
    <string name="dialog_change_email_success">E-mail de verificação enviado!</string>
    <string name="dialog_change_password_title">Alterar Senha</string>
    <string name="dialog_change_password_message">Confirme sua senha atual e informe a nova senha.</string>
    <string name="dialog_new_password_hint">Nova senha</string>
    <string name="dialog_confirm_new_password_hint">Confirmar nova senha</string>
    <string name="dialog_change_password_success">Senha alterada com sucesso!</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_confirm">Confirmar</string>
    <string name="dialog_logout_title">Sair da conta</string>
    <string name="dialog_logout_message">Tem certeza que deseja sair?</string>
    <string name="dialog_yes">Sim</string>
    <string name="dialog_no">Não</string>
    <string name="dialog_email_verification_title">Verifique seu e-mail</string>
    <string name="dialog_email_verification_desc">Enviamos um link de confirmação para:</string>
    <string name="dialog_email_verification_instruction">Toque no link recebido para ativar sua conta e liberar o acesso.</string>
    <string name="dialog_email_verification_spam_warning">Não encontrou? Verifique sua caixa de Spam ou Lixo Eletrônico.</string>
    <string name="dialog_action_understood">Entendi</string>
    <string name="dialog_action_open_email">Abrir App de E-mail</string>
    <string name="dialog_chooser_title">Escolha seu app de e-mail</string>
    <string name="register_success_no_email">Cadastro realizado! Verifique seu e-mail.</string>
    <string name="error_name_required">Informe o nome.</string>
    <string name="error_name_min_length">O nome deve ter pelo menos %1$d letras.</string>
    <string name="error_email_required">Informe o e-mail.</string>
    <string name="error_email_invalid">E-mail inválido.</string>
    <string name="error_phone_invalid">Telefone inválido.</string>
    <string name="error_password_required">Informe a senha.</string>
    <string name="error_password_min_length">A senha deve ter pelo menos %1$d caracteres.</string>
    <string name="error_confirm_password_required">Repita a senha.</string>
    <string name="error_confirm_password_mismatch">As senhas não coincidem.</string>
    <string name="error_register_email_in_use">Este e-mail já está cadastrado.</string>
    <string name="error_register_generic">Erro ao cadastrar. Tente novamente.</string>
    <string name="error_register_verification_failed">Cadastro feito, mas erro ao enviar e-mail de verificação.</string>
    <string name="error_update_profile_failed">Erro ao atualizar perfil. Tente novamente.</string>
    <string name="error_user_not_identified">Erro: usuário não identificado.</string>
    <string name="reset_subtitle">Informe seu e-mail cadastrado</string>
    <string name="reset_email_hint">E-mail</string>
    <string name="reset_button_text">Enviar</string>
    <string name="snackbar_error_email_not_found">Este e-mail não está cadastrado.</string>
    <string name="home_hello_guest">Olá, Visitante</string>
    <string name="home_hello_user">Olá, %s</string>
    <string name="home_subtitle_guest">Entrar ou criar conta</string>
    <string name="home_search_hint">Buscar receitas de chá…</string>
    <string name="home_subtitle_free">Modo Degustação</string>
    <string name="home_subtitle_premium">Membro Vitalício</string>
    <string name="banner_guest_title">Crie sua conta Grátis</string>
    <string name="banner_guest_desc">Salve favoritos e acesse conteúdos exclusivos.</string>
    <string name="banner_guest_btn">Cadastrar Agora</string>
    <string name="banner_free_title">Desbloqueie Tudo</string>
    <string name="banner_free_desc">Tenha acesso ilimitado e vitalício a todas as receitas.</string>
    <string name="banner_free_btn">Ser Premium</string>
    <string name="banner_premium_title">Receita em Destaque</string>
    <string name="banner_premium_desc">Descubra novos sabores para o seu dia.</string>
    <string name="banner_premium_btn">Ver Receitas</string>
    <string name="section_categories">O que você busca hoje?</string>
    <string name="cat_calm">Dormir\nBem</string>
    <string name="cat_energy">Energia\nFoco</string>
    <string name="cat_detox">Perder\nPeso</string>
    <string name="cat_more">Ver\nTodos</string>
    <string name="cd_icon_avatar">Imagem perfil do usuário</string>
    <string name="cd_banner_icon">Ilustração ícone de acordo com plano de usuário.</string>
    <string name="categories_title">Categorias de Chás</string>
    <string name="categories_empty_state" tools:ignore="Typos">Não encontramos nenhuma categoria no momento.\nTente novamente mais tarde.</string>
    <string name="categories_error_generic">Ocorreu um erro ao carregar as categorias. Por favor, tente novamente.</string>
    <string name="categories_item_icon_go_content_description">Ver receitas desta categoria.</string>
    <string name="categories_loading_message">Carregando as categorias…</string>
    <string name="recipes_list_error_generic">Ocorreu um erro ao carregar as receitas. Por favor, tente novamente.</string>
    <string name="recipes_list_loading_message">Carregando as receitas…</string>
    <string name="locked_sheet_title">Receita Exclusiva</string>
    <string name="locked_sheet_desc">Torne-se Vitalício para ver esta e outras 160 receitas!</string>
    <string name="locked_sheet_btn_offer">Ver Oferta</string>
    <string name="locked_sheet_title_guest">Faça Login para Acessar</string>
    <string name="locked_sheet_desc_guest">Para desbloquear esta e outras 160 receitas exclusivas, entre na sua conta ou cadastre-se.</string>
    <string name="locked_sheet_btn_guest">Entrar ou Cadastrar</string>
    <string name="locked_favorite_title_guest">Faça Login para Favoritar</string>
    <string name="locked_favorite_desc_guest">Para favoritar esta e outras 160 receitas exclusivas, entre na sua conta ou cadastre-se.</string>
    <string name="locked_favorite_title_user">Favorito Exclusivo</string>
    <string name="locked_favorite_desc_user">Torne-se Vitalício para favoritar esta e quantas receitas desejar!</string>
    <string name="cd_close_dialog">Fechar diálogo</string>
    <string name="cd_star_rating">Avaliação 5 estrelas</string>
    <string name="recipe_detail_section_intro">Resumo</string>
    <string name="recipe_detail_section_benefits">Benefícios</string>
    <string name="recipe_detail_section_ingredients">Ingredientes</string>
    <string name="recipe_detail_section_preparation">Modo de Preparo</string>
    <string name="recipe_detail_section_notes">Observações</string>
    <string name="cd_favorite_add">Adicionar aos favoritos</string>
    <string name="cd_favorite_remove">Remover dos favoritos</string>
    <string name="recipe_lock_closed_content_description">Receita disponível apenas para usuários com plano ativo</string>
    <string name="favorites_title">Favoritos</string>
    <string name="favorites_empty_state">Você ainda não tem receitas favoritas.</string>
    <string name="recipe_favorite_added_success">%1$s adicionada aos favoritos.</string>
    <string name="recipe_favorite_removed_success">%1$s removida de favoritos.</string>
    <string name="favorites_loading_message">Carregando lista de favoritas…</string>
    <string name="plans_hero_title">Desbloqueie o Potencial Completo</string>
    <string name="plans_hero_subtitle">Tenha acesso ilimitado a todas as receitas e benefícios exclusivos para sempre.</string>
    <string name="benefit_all_recipes">Acesso a todas as receitas de chás</string>
    <string name="benefit_favorites">Salve seus favoritos ilimitados</string>
    <string name="benefit_updates">Novas receitas gratuitamente</string>
    <string name="benefit_one_time">Pagamento único, sem mensalidade</string>
    <string name="plans_btn_buy">Obter Acesso Vitalício</string>
    <string name="plans_btn_restore">Já comprou? Restaurar acesso</string>
    <string name="plans_disclaimer">Compra segura via Google Play</string>
    <string name="plans_plan_life_price">R$ 29,90</string>
    <string name="msg_purchase_pending">Compra pendente. Aguarde a confirmação.</string>
    <string name="msg_purchase_cancelled">Compra cancelada pelo usuário.</string>
    <string name="msg_purchase_error">Erro na compra: %s</string>
    <string name="msg_purchase_success">Premium liberado com sucesso! Aproveite.</string>
    <string name="msg_restore_empty">Nenhuma compra ativa encontrada.</string>
    <string name="msg_restore_owned">Você já possui este item. Restaurando…</string>
    <string name="search_hint">Buscar receitas…</string>
    <string name="search_loading_message">Procurando a receita…</string>
    <string name="search_empty_title">Não encontramos nenhuma receita com este nome.</string>
    <string name="search_btn_back">Voltar para o Início</string>
</resources>